validation and tr/catch
